# codex-plus-plus-launcher

./: .gitignore  README.md  README_EN.md  README_PYPI.md  cxpp-win32-x64.spec  install-npm.cjs  install.ps1  install.sh  package.json  pyproject.toml
.github/upstream-sync/: latest.json
.github/workflows/: deprecate-legacy-npm.yml  publish-npm-bootstrap.yml  release.yml  sync-upstream-wrapper.yml
codex_plus_plus_launcher/: __init__.py  __main__.py  cli.py  doctor.py  runtime.py  upstream_patch.py  upstream_release.py
npm/: build-local-binary.cjs  cxpp.js  i18n.js  install.js  launcher.js  plugin-auth-unlocked.js  smoke-install.cjs  verify-package.cjs
patches/: codex-plus-plus-plugin-unlock.patch
tests/: test_cli.py  test_doctor.py  test_install_ps1.py  test_installers_text.py  test_npm_launcher.py  test_release_config.py  test_runtime.py  test_upstream_patch.py  test_upstream_release.py
